# CGQR

./: .gitignore  CMakeLists.txt  README.md
include/: conjugate_gradient.hpp  qr_factorization.hpp  utils.hpp
results/: cg_run.txt
scr/: cg_optimization.m  conjugate_gradient.m  householder_vector.m  main.m  qr_householders.m
src/: conjugate_gradient.cpp  main.cpp  qr_factorization.cpp  utils.cpp
tests/: cg_test.cpp  qr_test.cpp
